# ProtoGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
src/: main.cpp
src/core/: platform.h
src/gfx/: shader.cpp  shader.h
src/shader/: tri.glsl
src/window/: backend.h  event.h  window.cpp  window.h
src/window/backend/: glfw.cpp  glfw.h
